resources/public/css/kif.css
body, label, textarea, select, button
{
    font-family: "Helvetica Neue", Arial, sans-serif;
}

#page-wrapper
{
    margin-top: 10px;
    margin-bottom: 10px;
}

#file-info-wrapper
{
    margin-bottom: 5px;
    padding: 5px;
    background: rgb(240,240,240) none repeat scroll;
    border-radius: 4px;
}

#file-info-wrapper-inner
{
    border: 1px rgb(215,215,215) solid;
    background-color: rgb(255,255,255);
    border-radius: 4px;
}

#filename
{
    border-bottom: 1px rgb(215,215,215) solid;
    background-color: rgb(240,240,240);
}

#lastmod, #filesize, #remaining, #useslimit
{
    float: right;
    width: 66%;
}

#lastmod-label, #filesize-label, #remaining-label, #useslimit-label 
{
    float: left;
    width: 33%;
    text-align: right;
}

#wrapper_filename
{
    text-align: center;
}

div#download_link_div
{
    padding-top: 20px;
    padding-bottom: 20px;
    margin-left: 0px;
    margin-right: 0px;
}

#download_link
{
    padding: 0px;
    margin: 0px;
    width: 100%;
}

#wrapper_irods_avus
{
    margin-bottom: 20px;
    background: rgb(240, 240, 240) none repeat scroll;
    padding: 4px;
    border-radius: 4px;
}

#irods_avus_wrapper
{
    padding-right: 3px;
    padding-left: 3px;
}

#wrapper_irods_avus_inner
{
    border: 1px rgb(215,215,215) solid;
    background: rgb(240,240,240) none repeat scroll;
    border-radius: 4px;
}

#alternative_downloads
{
    background: rgb(240,240,240) none repeat scroll;
    padding: 4px;
    border-radius: 4px;
    margin: 0px;
}

#clippy-irods-instrs, #clippy-wget-instrs, #clippy-curl-instrs
{
    padding-left: 5px;
}

#clippy-irods-wrapper, #clippy-wget-wrapper, #clippy-curl-wrapper
{
    padding-left: 5px;
}

#alternative_downloads_header
{
    font-size: 125%;
    padding-left: 5px;
}

#alternative_downloads_inner
{
    background: rgb(255,255,255) none repeat scroll;
    border: 1px rgb(215,215,215) solid;
    border-radius: 4px;
}

#header_irods_instr, #header_downloader_instr
{
    padding-left: 5px;
    background:rgb(240,240,240);
}

#header_irods_instr
{
    border-bottom: 1px rgb(215,215,215) solid;
}

#header_downloader_instr
{
    margin-top: 5px;
    border-top: 1px rgb(215,215,215) solid;
    border-bottom: 1px rgb(215,215,215) solid;
}

.ui-toolbar
{
    padding-left: 3px;
}

.ui-buttonset
{
    margin-right: 2px;
}

td, th
{
    padding-left: 5px;
    padding-right: 5px;
}

td
{
    background-color: rgb(255,255,255);
    border-right: 1px rgb(210, 210, 210) solid;
    border-left: 1px rgb(210, 210, 210) solid;
}

.ui-widget-content, .ui-state-default, .ui-widget-header
{
    background: rgb(240,240,240) none repeat scroll;
}

.ui-widget-header
{
    padding-top: 2px;
    padding-bottom: 4px;
    border: 0px;
}

.ui-corner-tl
{
    border-top-left-radius: 0px;
}

.ui-corner-tr
{
    border-top-right-radius: 0px;
}

.ui-corner-br
{
    border-bottom-right-radius: 0px;
}

.ui-corner-bl
{
    border-bottom-left-radius: 0px;
}

code
{
    margin-left: 5px;
    font-family: monospace, monospace;
    font-size: 100%;
}

label
{
    text-align: right;
}

h1
{
    font-size: 200%;
    padding: 0px;
    margin: 0px;
}

h3
{
    font-size: 125%;
    padding-left: 5px;
    margin: 0px;
    background-color: rgb(240,240,240);
}

.css_right
{
    float: right;
}

.ui-button
{
    margin-left: 0px;
    margin-right: -0.1em !important;
    margin-top: 1px;
    padding: 0px 6px;
}

tbody
{
    border-bottom: 1px rgb(210,210, 210) solid;
}

